Chat-able
+ Sign up
+ Chat
+ Load old messages (need to add scroll event)
+ send image (need to fix bugs)
+ send file (not tested)
+ A lot of bugs